# ChannelManagerBot

./: .gitignore  api.py  bot.py  config.py  pyproject.toml  requirements.txt  run.sh
db/: config.py  crud.py  models.py  session.py
handlers/: channel.py  start.py  subscription.py  support.py
keyboards/: main.py
payment/: core.py
services/: channel.py  subscription_checker.py
